--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
                         // Attempt to open Instagram Story with the image
                         const link = document.createElement('a');
-                        link.href = `instagram://story`;
+                        link.href = `instagram-stories://share`;
                         link.click();
 
                         // Instruct the user to manually select the image from their gallery
