--- a/index.html
+++ b/index.html
@@ -3,52 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Share Image Example</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 20px;
-        }
-        .share-button {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #00A9B4;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            cursor: pointer;
-            border: none;
-        }
-    </style>
+    <title>Image Save and Share Example</title>
 </head>
 <body>
-    <h1>Share Image Example</h1>
-    <p>Click the button below to share the image:</p>
 
-    <!-- Share Button -->
-    <button class="share-button" id="shareButton">Share Image</button>
+    <h1>Save and Share Image</h1>
+    <img id="imageToSave" src="image.png" alt="Image to Save" style="max-width: 100%; height: auto;"/>
+    <br/>
+    <button id="saveBtn">Save Image</button>
+    <button id="shareBtn">Share Image</button>
 
     <script>
-        document.getElementById('shareButton').addEventListener('click', async () => {
-            try {
-                const imageUrl = 'image.png'; // Update with your image URL
-                const shareData = {
-                    title: 'Check out this image!',
-                    text: 'Here is an image I wanted to share with you.',
-                    url: imageUrl
-                };
+        document.getElementById('saveBtn').addEventListener('click', () => {
+            const imageUrl = document.getElementById('imageToSave').src;
+            const link = document.createElement('a');
+            link.href = imageUrl;
+            link.download = "downloaded_image.jpg"; // Set the default download file name
+            link.click();
+        });
 
-                if (navigator.share) {
-                    await navigator.share(shareData);
-                    console.log('Image shared successfully');
-                } else {
-                    console.log('Share API not supported on this browser.');
-                }
-            } catch (error) {
-                console.error('Error sharing:', error);
-            }
+        document.getElementById('shareBtn').addEventListener('click', () => {
+            const imageUrl = document.getElementById('imageToSave').src;
+            const fileName = "shared_image.jpg";
+
+            fetch(imageUrl)
+                .then((response) => response.blob())
+                .then((blob) => {
+                    const files = [new File([blob], fileName, { type: "image/png" })];
+                    if (navigator.canShare && navigator.canShare({ files })) {
+                        navigator.share({ files })
+                            .then(() => console.log('Image shared successfully'))
+                            .catch((error) => console.error('Error sharing image:', error));
+                    } else {
+                        alert('Your browser does not support file sharing.');
+                    }
+                })
+                .catch((error) => console.error('Error fetching image:', error));
         });
     </script>
+
 </body>
 </html>
