--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
     <h1>Save and Share Image</h1>
-    <img id="imageToSave" src="image.png" alt="Image to Save" style="max-width: 100%; height: auto;"/>
+    <img id="imageToSave" src="Robotics.png" alt="Image to Save" style="max-width: 100%; height: auto;"/>
     <br/>
     <button id="saveBtn">Save Image</button>
     <button id="shareBtn">Share Image</button>
